--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -8,95 +8,113 @@
     android:layout_height="match_parent"
     tools:context=".loginPage">
 
-  <Button
-      android:id="@+id/l_button"
-      android:layout_width="230dp"
-      android:layout_height="50dp"
-      android:backgroundTint="@color/sage"
-      android:text="Sign in "
-      android:textSize="20sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.497"
-      app:layout_constraintStart_toStartOf="parent"
-      tools:layout_editor_absoluteY="466dp" />
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="44dp"
+        android:backgroundTint="@color/sage"
+        android:text="Sign in "
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
-  <EditText
-      android:id="@+id/l_email"
-      android:layout_width="315dp"
-      android:layout_height="45dp"
-      android:layout_marginTop="40dp"
-      android:background="@drawable/bg_shape"
-      android:drawableLeft="@drawable/mail"
-      android:ems="10"
-      android:hint=" ‎Email"
-      android:inputType="text"
-      android:paddingLeft="15dp"
-      android:paddingTop="10dp"
-      android:paddingRight="10dp"
-      android:paddingBottom="10dp"
-      android:textColorHint="#959494"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.447"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView" />
+    <EditText
+        android:id="@+id/login_email"
+        android:layout_width="315dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/bg_shape"
+        android:drawableLeft="@drawable/mail"
+        android:ems="10"
+        android:hint=" ‎Email"
+        android:inputType="text"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#959494"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-  <EditText
-      android:id="@+id/l_password"
-      android:layout_width="315dp"
-      android:password="true"
-      android:layout_height="45dp"
-      android:layout_marginTop="24dp"
-      android:background="@drawable/bg_shape"
-      android:drawableLeft="@drawable/unlock"
-      android:ems="10"
-      android:hint=" ‎Password"
-      android:inputType="text"
-      android:paddingLeft="15dp"
-      android:paddingTop="10dp"
-      android:paddingRight="10dp"
-      android:paddingBottom="10dp"
-      android:textColorHint="#959494"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.458"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/l_email"
-      tools:ignore="Deprecated,ExtraText" />
+    <EditText
+        android:id="@+id/login_password"
+        android:layout_width="315dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bg_shape"
+        android:drawableLeft="@drawable/unlock"
+        android:ems="10"
+        android:hint=" ‎Password"
+        android:inputType="text"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:password="true"
+        android:textColor="@color/black"
+        android:textColorHint="#959494"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_email"
+        tools:ignore="Deprecated,ExtraText" />
 
-  <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="286dp"
-      android:layout_height="166dp"
-      android:layout_marginTop="108dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.445"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/logo_svg" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="286dp"
+        android:layout_height="166dp"
+        android:layout_marginTop="108dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.445"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_svg" />
 
-  <TextView
-      android:id="@+id/textview"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Don't have an account? "
-      android:textColor="#000000"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.4"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/l_button"
-      app:layout_constraintVertical_bias="0.066" />
+    <TextView
+        android:id="@+id/have_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account? "
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.339"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintVertical_bias="0.068" />
 
-  <TextView
-      android:id="@+id/l_register"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Register"
-      android:textColor="#63725D"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toEndOf="@+id/textview"
-      app:layout_constraintTop_toBottomOf="@+id/l_button"
-      app:layout_constraintVertical_bias="0.066" />
+    <TextView
+        android:id="@+id/register_now"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register now"
+        android:textColor="#63725D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/have_account"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintVertical_bias="0.068" />
+
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/sage"
+        android:text="Forgot password?"
+        android:textColor="#63725D"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_password"
+        app:layout_constraintVertical_bias="0.321" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
