--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Charityyyyy" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Charityyyyy" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/sage</item>
+        <item name="colorPrimaryVariant">@color/green</item>
+        <item name="android:textColorPrimary">@color/sage</item>
+        <item name="android:statusBarColor">@color/beige</item>
     </style>
 
     <style name="Theme.Charityyyyy" parent="Base.Theme.Charityyyyy" />
+
+    <style name="ThemeOverlay.AppCompat.navTheme">
+        <item name="colorPrimary">@color/beige</item>
+        
+    </style>
+    
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
+    </style>
 </resources>
