--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -9,19 +9,20 @@
     tools:context=".loginPage">
 
     <EditText
-        android:id="@+id/Fullname"
+        android:id="@+id/register_fullname"
         android:layout_width="315dp"
         android:layout_height="45dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/bg_shape"
         android:drawableLeft="@drawable/username"
         android:ems="10"
-        android:hint=" ‎FullName"
+        android:hint=" ‎‏‏‎ ‎FullName"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/black"
         android:textColorHint="#959494"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.413"
@@ -29,27 +30,28 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/l_password"
+        android:id="@+id/register_phone"
         android:layout_width="315dp"
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/bg_shape"
-        android:drawableLeft="@drawable/unlock"
+        android:drawableLeft="@drawable/phone"
         android:ems="10"
-        android:hint=" ‎Password"
+        android:hint=" ‎‏‏‎ ‎Phone Number"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/black"
         android:textColorHint="#959494"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/l_email" />
+        app:layout_constraintTop_toBottomOf="@+id/register_email" />
 
     <Button
-        android:id="@+id/l_button"
+        android:id="@+id/register_button"
         android:layout_width="230dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -59,47 +61,49 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/r_confirm_password" />
+        app:layout_constraintTop_toBottomOf="@+id/register_password" />
 
     <EditText
-        android:id="@+id/l_email"
+        android:id="@+id/register_email"
         android:layout_width="315dp"
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/bg_shape"
         android:drawableLeft="@drawable/mail"
         android:ems="10"
-        android:hint=" ‎Email"
+        android:hint=" ‎‏‏‎ ‎Email"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/black"
         android:textColorHint="#959494"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.434"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Fullname" />
+        app:layout_constraintTop_toBottomOf="@+id/register_fullname" />
 
     <EditText
-        android:id="@+id/r_confirm_password"
+        android:id="@+id/register_password"
         android:layout_width="315dp"
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/bg_shape"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
-        android:hint=" ‎Confirm Password"
+        android:hint=" ‎‏‏‎ ‎Password"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
+        android:textColor="@color/black"
         android:textColorHint="#959494"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/l_password" />
+        app:layout_constraintTop_toBottomOf="@+id/register_phone" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -112,7 +116,7 @@
         app:srcCompat="@drawable/register_svg" />
 
     <TextView
-        android:id="@+id/textview"
+        android:id="@+id/have_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account?"
@@ -120,7 +124,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/l_button"
+        app:layout_constraintTop_toBottomOf="@+id/register_button"
         app:layout_constraintVertical_bias="0.073" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
