--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sage">#9CAF88</color>
+    <color name="beige">#C3C1B7</color>
+    <color name="green">#82B484</color>
 </resources>
