--- a/app/src/main/res/layout/event_view.xml
+++ b/app/src/main/res/layout/event_view.xml
@@ -5,6 +5,37 @@
     android:layout_height="200dp"
     android:id="@+id/event"
     android:orientation="vertical">
+    <TextView
+        android:id="@+id/eventNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:text="Event Name" />
 
+    <TextView
+        android:id="@+id/eventDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#333333"
+        android:text="Event Date" />
+
+    <TextView
+        android:id="@+id/eventDescriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#666666"
+        android:text="Event Description" />
+
+    <TextView
+        android:id="@+id/eventRequirementsTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#666666"
+        android:text="Event Requirements" />
 
 </LinearLayout>
