--- a/app/src/main/res/layout/event_view.xml
+++ b/app/src/main/res/layout/event_view.xml
@@ -1,41 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:background="@drawable/eventbg"
+    android:alpha="0.5"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:id="@+id/event"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="end"
+    >
+
     <TextView
         android:id="@+id/eventNameTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:layout_height="42dp"
+        android:gravity="center"
+        android:text="Event Name"
         android:textColor="#000000"
-        android:text="Event Name" />
+        android:textSize="21sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/eventDateTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_height="35dp"
+        android:text="Event Date"
         android:textColor="#333333"
-        android:text="Event Date" />
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/eventDescriptionTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="69dp"
+        android:text="Event Description"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        android:textColor="#666666"
-        android:text="Event Description" />
+        android:textStyle="bold"
+        />
 
     <TextView
         android:id="@+id/eventRequirementsTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
+        android:text="Event Requirements"
+        android:textColor="@color/black"
         android:textSize="14sp"
-        android:textColor="#666666"
-        android:text="Event Requirements" />
+        android:textStyle="bold"/>
 
 </LinearLayout>
